<resources>
    <string name="app_name">FoundEat</string>
    <string name="title_activity_restaurant_location">RestaurantLocation</string>
    <string name="title_activity_restaurant_pick_location">RestaurantPickLocation</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_logout">Cerrar sesión</string>
    <string name="menu_delete">Eliminar cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="logoDescrition">logo</string>

    <string name="yatienescuenta">¿Ya tienes una cuenta? Ingresa</string>

    <string name="cliente">Cliente</string>
    <string name="restauranteTitle">Restaurante</string>
    <string name="iniciarsesionBtn">Iniciar Sesión</string>
    <string name="registrarseBtn">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="confirmarcon">Confirmar contraseña</string>
    <string name="continuar">Continuar</string>
    <string name="omitir">Omitir</string>
    <string name="agregarfoto">¿deseas agregar una foto de perfíl?</string>
    <string name="favFood">Ahora, escoge tus 3 platos favoritos.</string>
    <string name="facebook_app_id">615511796312266</string>
    <string name="fb_login_protocol_scheme">fb615511796312266</string>
    <string name="reseñas">Reseñas y comentarios</string>
    <string name="iniciaFB">O inicia con</string>
    <string name="agregarReseña">Agregar reseña</string>
    <string name="writereview">¡Cuentanos tu experiencia!</string>
    <string name="califica">Califica tu experiencia</string>
</resources>