<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#050B30"
    tools:context=".ui.Login">

    <EditText
        android:id="@+id/clientConfirmPassET"
        style="@style/styleET"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/confirmarcon"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintEnd_toEndOf="@+id/clientPassET"
        app:layout_constraintStart_toStartOf="@+id/clientPassET"
        app:layout_constraintTop_toBottomOf="@+id/clientPassET"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="Regístrate"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/clientRegisterBtn"
        style="@style/AppButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="110dp"
        android:text="@string/registrarseBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/clientNameET"
        style="@style/styleET"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/clientEmailET"
        style="@style/styleET"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/clientNameET"
        app:layout_constraintStart_toStartOf="@+id/clientNameET"
        app:layout_constraintTop_toBottomOf="@+id/clientNameET"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/clientPassET"
        style="@style/styleET"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintEnd_toEndOf="@+id/clientEmailET"
        app:layout_constraintStart_toStartOf="@+id/clientEmailET"
        app:layout_constraintTop_toBottomOf="@+id/clientEmailET"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/clientLogin"
        style="@style/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/yatienescuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        style="@style/logoStyle"
        android:layout_width="124dp"
        android:layout_height="0dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBackC"
        style="@style/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back_ios_24px"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>