<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.restaurant.menuList.AddMenuItemActivity">

    <EditText
        android:id="@+id/contentReview"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/textfieldborder"
        android:ems="10"
        android:fontFamily="@font/dmsansregular"
        android:gravity="top"
        android:hint="Escribe tu comentario"
        android:inputType="textMultiLine"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toTopOf="@+id/addClientReviewBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <android.widget.Button
        android:id="@+id/addClientReviewBtn"
        style="@style/AppButton"
        android:layout_width="0dp"
        android:layout_height="48dp"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        android:text="@string/agregarReseña"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        style="@style/titleRestaurant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:text="@string/writereview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageButton
        android:id="@+id/goBackTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/arrow_back_ios_24px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back_ios_24px" />

    <TextView
        android:id="@+id/textView10"
        style="@style/titleRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reseñas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/star1"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:text="Button"
        app:layout_constraintBottom_toTopOf="@+id/addClientReviewBtn"
        app:layout_constraintEnd_toStartOf="@+id/star2"
        app:layout_constraintTop_toBottomOf="@+id/contentReview" />

    <android.widget.Button
        android:id="@+id/star5"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="@+id/star4"
        app:layout_constraintStart_toEndOf="@+id/star4"
        app:layout_constraintTop_toTopOf="@+id/star4" />

    <android.widget.Button
        android:id="@+id/star2"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="@+id/star1"
        app:layout_constraintEnd_toStartOf="@+id/star3"
        app:layout_constraintTop_toTopOf="@+id/star1" />

    <android.widget.Button
        android:id="@+id/star3"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="@+id/star2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/star2" />

    <android.widget.Button
        android:id="@+id/star4"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="@+id/star3"
        app:layout_constraintStart_toEndOf="@+id/star3"
        app:layout_constraintTop_toTopOf="@+id/star3" />

</androidx.constraintlayout.widget.ConstraintLayout>